# shards-recovery

./: UpgradeWindow.ui  al.getcryst.shard.updater.json  meson.build
data/: al.getcryst.shard.updater.appdata.xml.in  al.getcryst.shard.updater.desktop.in  al.getcryst.shard.updater.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: HeaderBar.py  HeaderBar.ui  main.py  meson.build  shard_updater.gresource.xml  shard_updater.in  window.py  window.ui
src/scripts/install/: bootloader.sh  data.sh  desktop.sh  meson.build  recovery.sh  root.sh  system.sh
src/scripts/install/partition/: block.sh  meson.build  nvme.sh  partition.sh  shards.sh
src/scripts/upgrade/data/: meson.build  mount.sh  snapshot.sh  update.sh
src/scripts/upgrade/desktop/: meson.build  mount.sh  snapshot.sh  update.sh
src/scripts/upgrade/root/: meson.build  mount.sh  snapshot.sh  update.sh
src/scripts/upgrade/system/: meson.build  mount.sh  snapshot.sh  update.sh
src/utils/: meson.build
src/widgets/: Disk.py  Disk.ui  MenuButton.py  MenuButton.ui  UpdateStep.py  UpdateStep.ui  YNDialog.py  meson.build
src/windows/: InstallWindow.py  InstallWindow.ui  LogView.py  LogView.ui  RecoveryTerminalWindow.py  RecoveryTerminalWindow.ui  UpgradeWindow.py  UpgradeWindow.ui  meson.build
src/windows/InstallWindows/: DiskSelect.py  DiskSelect.ui  InstallFail.py  InstallFail.ui  InstallFinish.py  InstallFinish.ui  InstallProgress.py  InstallProgress.ui  meson.build
src/windows/UpgradeWindows/: Upgrade.py  Upgrade.ui  UpgradeFail.py  UpgradeFail.ui  UpgradeFinish.py  UpgradeFinish.ui  meson.build
